column style pre-icons - FIXNEEDED/right side align

--- a/styles/style.css
+++ b/styles/style.css
@@ -208,23 +208,21 @@ html{
   /* Setting Food/Sleep/Bored Icons on far Right with contained div style */
 
   .uiElements {
-    flex-grow: 3;
-    align-content: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    right: 35px;
   }
 
 /* Icons for Sleep */
 /* <div class="sleepBox"> */
 .sleepBox {
   background: white;
-  display: block;
-  position: absolute;
   top: 25vh;
-  right: 35px;
-  flex-grow: 1;
   margin: 1px;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   z-index: 25;
 }
 
@@ -233,15 +231,11 @@ html{
 
 .foodBox {
   background: white;
-  display: block;
-  position: absolute;
   top: 50vh;
-  right: 35px;
-  flex-grow: 1;
   margin: 1px;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   z-index: 25;
 }
 
@@ -249,15 +243,11 @@ html{
 /* <div class="boredomBox"> */
 .boredomBox {
   background: white;
-  display: block;
-  position: absolute;
-  bottom: 15vh;
-  right: 35px;
-  flex-grow: 1;
+  bottom: 5vh;
   margin: 1px;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   z-index: 25;
 }
   
